// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/integrations/AbstractOutgoingOAuthConnection should match snapshot 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "undefinedundefined",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <AbstractOutgoingOAuthConnection
        footer={
          Object {
            "defaultMessage": "Footer",
            "id": "Footer",
          }
        }
        header={
          Object {
            "defaultMessage": "Header",
            "id": "Header",
          }
        }
        initialConnection={
          Object {
            "audiences": Array [
              "https://aud.com",
            ],
            "client_id": "clientid",
            "client_secret": "",
            "create_at": 1501365458934,
            "creator_id": "88oybd1dwfdoxpkpw1h5kpbyco",
            "grant_type": "client_credentials",
            "id": "facxd9wpzpbpfp8pad78xj75pr",
            "name": "testConnection",
            "oauth_token_url": "https://token.com",
            "update_at": 1501365458934,
          }
        }
        loading={
          Object {
            "defaultMessage": "Loading",
            "id": "Loading",
          }
        }
        renderExtra={
          <div>
            renderExtra
          </div>
        }
        serverError=""
        submitAction={[MockFunction]}
        team={
          Object {
            "allow_open_invite": false,
            "allowed_domains": "",
            "company_name": "",
            "create_at": 0,
            "delete_at": 0,
            "description": "",
            "display_name": "name",
            "email": "",
            "group_constrained": false,
            "id": "facxd9wpzpbpfp8pad78xj75pr",
            "invite_id": "",
            "name": "test",
            "scheme_id": "id",
            "type": "O",
            "update_at": 0,
          }
        }
      >
        <div
          className="backstage-content"
        >
          <BackstageHeader>
            <div
              className="backstage-header"
            >
              <h1>
                <Link
                  to="/test/integrations/outgoing-oauth2-connections"
                >
                  <LinkAnchor
                    href="/test/integrations/outgoing-oauth2-connections"
                    navigate={[Function]}
                  >
                    <a
                      href="/test/integrations/outgoing-oauth2-connections"
                      onClick={[Function]}
                    >
                      <FormattedMessage
                        defaultMessage="Outgoing OAuth Connections"
                        id="add_outgoing_oauth_connection.header"
                      >
                        <span>
                          Outgoing OAuth Connections
                        </span>
                      </FormattedMessage>
                    </a>
                  </LinkAnchor>
                </Link>
                <span
                  className="backstage-header__divider"
                  key="divider1"
                >
                  <i
                    className="fa fa-angle-right"
                    title="Breadcrumb Icon"
                  />
                </span>
                <FormattedMessage
                  defaultMessage="Header"
                  id="Header"
                >
                  <span>
                    Header
                  </span>
                </FormattedMessage>
              </h1>
            </div>
          </BackstageHeader>
          <div
            className="backstage-form"
          >
            <form
              className="form-horizontal"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label col-sm-4"
                  htmlFor="name"
                >
                  <FormattedMessage
                    defaultMessage="Name"
                    id="add_outgoing_oauth_connection.name.label"
                  >
                    <span>
                      Name
                    </span>
                  </FormattedMessage>
                </label>
                <div
                  className="col-md-5 col-sm-8"
                >
                  <input
                    className="form-control"
                    id="name"
                    onChange={[Function]}
                    type="text"
                    value="testConnection"
                  />
                  <div
                    className="form__help"
                  >
                    <FormattedMessage
                      defaultMessage="Specify the name for your OAuth connection."
                      id="add_outgoing_oauth_connection.name.help"
                    >
                      <span>
                        Specify the name for your OAuth connection.
                      </span>
                    </FormattedMessage>
                  </div>
                </div>
              </div>
              <div
                className="form-group"
              >
                <label
                  className="control-label col-sm-4"
                  htmlFor="client_id"
                >
                  <FormattedMessage
                    defaultMessage="Client ID"
                    id="add_outgoing_oauth_connection.client_id.label"
                  >
                    <span>
                      Client ID
                    </span>
                  </FormattedMessage>
                </label>
                <div
                  className="col-md-5 col-sm-8"
                >
                  <input
                    autoComplete="off"
                    className="form-control"
                    id="client_id"
                    onChange={[Function]}
                    type="text"
                    value="clientid"
                  />
                  <div
                    className="form__help"
                  >
                    <FormattedMessage
                      defaultMessage="Specify the Client ID for your OAuth connection."
                      id="add_outgoing_oauth_connection.client_id.help"
                    >
                      <span>
                        Specify the Client ID for your OAuth connection.
                      </span>
                    </FormattedMessage>
                  </div>
                </div>
              </div>
              <div
                className="form-group"
              >
                <label
                  className="control-label col-sm-4"
                  htmlFor="client_secret"
                >
                  <FormattedMessage
                    defaultMessage="Client Secret"
                    id="add_outgoing_oauth_connection.client_secret.label"
                  >
                    <span>
                      Client Secret
                    </span>
                  </FormattedMessage>
                </label>
                <div
                  className="col-md-5 col-sm-8"
                >
                  <input
                    autoComplete="off"
                    className="form-control disabled"
                    disabled={true}
                    id="client_secret"
                    type="text"
                    value="••••••••••••••••••••••••••••••••••••••••"
                  />
                  <span
                    className="outgoing-oauth-connections-edit-secret"
                    onClick={[Function]}
                  >
                    <i
                      className="icon icon-pencil-outline"
                    />
                  </span>
                  <div
                    className="form__help"
                  >
                    <FormattedMessage
                      defaultMessage="Specify the Client Secret for your OAuth connection."
                      id="add_outgoing_oauth_connection.client_secret.help"
                    >
                      <span>
                        Specify the Client Secret for your OAuth connection.
                      </span>
                    </FormattedMessage>
                  </div>
                </div>
              </div>
              <div
                className="form-group"
              >
                <label
                  className="control-label col-sm-4"
                  htmlFor="oauth_token_url"
                >
                  <FormattedMessage
                    defaultMessage="OAuth Token URL"
                    id="add_outgoing_oauth_connection.oauth_token_url.label"
                  >
                    <span>
                      OAuth Token URL
                    </span>
                  </FormattedMessage>
                </label>
                <div
                  className="col-md-5 col-sm-8"
                >
                  <input
                    className="form-control"
                    id="token_url"
                    onChange={[Function]}
                    type="text"
                    value="https://token.com"
                  />
                  <div
                    className="form__help"
                  >
                    <FormattedMessage
                      defaultMessage="Specify the OAuth Token URL for your OAuth connection."
                      id="add_outgoing_oauth_connection.oauth_token_url.help"
                    >
                      <span>
                        Specify the OAuth Token URL for your OAuth connection.
                      </span>
                    </FormattedMessage>
                  </div>
                  <div
                    className="outgoing-oauth-connection-validate-button-container"
                  >
                    <ValidateButton
                      onClick={[Function]}
                      setUnvalidated={[Function]}
                      status="initial"
                    >
                      <button
                        className="btn btn-tertiary btn-sm"
                        id="validateConnection"
                        onClick={[Function]}
                        type="button"
                      >
                        <FormattedMessage
                          defaultMessage="Validate Connection"
                          id="add_outgoing_oauth_connection.validate"
                        >
                          <span>
                            Validate Connection
                          </span>
                        </FormattedMessage>
                      </button>
                    </ValidateButton>
                  </div>
                </div>
              </div>
              <div
                className="form-group"
              >
                <label
                  className="control-label col-sm-4"
                  htmlFor="audienceUrls"
                >
                  <FormattedMessage
                    defaultMessage="Audience URLs (One Per Line)"
                    id="add_outgoing_oauth_connection.audienceUrls.label"
                  >
                    <span>
                      Audience URLs (One Per Line)
                    </span>
                  </FormattedMessage>
                </label>
                <div
                  className="col-md-5 col-sm-8"
                >
                  <textarea
                    className="form-control"
                    id="audienceUrls"
                    onChange={[Function]}
                    rows={3}
                    value="https://aud.com"
                  />
                  <div
                    className="form__help"
                  >
                    <FormattedMessage
                      defaultMessage="The URLs which will receive requests with the OAuth token, e.g. your custom slash command handler endpoint. Must be a valid URL and start with http:// or https://."
                      id="add_outgoing_oauth_connection.audienceUrls.help"
                    >
                      <span>
                        The URLs which will receive requests with the OAuth token, e.g. your custom slash command handler endpoint. Must be a valid URL and start with http:// or https://.
                      </span>
                    </FormattedMessage>
                  </div>
                </div>
              </div>
              <div
                className="backstage-form__footer"
              >
                <Memo(FormError)
                  errors={
                    Array [
                      "",
                      "",
                    ]
                  }
                  type="backstage"
                />
                <Link
                  className="btn btn-tertiary"
                  to="/test/integrations/outgoing-oauth2-connections"
                >
                  <LinkAnchor
                    className="btn btn-tertiary"
                    href="/test/integrations/outgoing-oauth2-connections"
                    navigate={[Function]}
                  >
                    <a
                      className="btn btn-tertiary"
                      href="/test/integrations/outgoing-oauth2-connections"
                      onClick={[Function]}
                    >
                      <FormattedMessage
                        defaultMessage="Cancel"
                        id="add_outgoing_oauth_connection.cancel"
                      >
                        <span>
                          Cancel
                        </span>
                      </FormattedMessage>
                    </a>
                  </LinkAnchor>
                </Link>
                <Memo(SpinnerButton)
                  className="btn btn-primary"
                  id="saveConnection"
                  onClick={[Function]}
                  spinning={false}
                  spinningText="Loading"
                  type="submit"
                >
                  <button
                    className="btn btn-primary"
                    disabled={false}
                    id="saveConnection"
                    onClick={[Function]}
                    type="submit"
                  >
                    <Memo(LoadingWrapper)
                      loading={false}
                      text="Loading"
                    >
                      <FormattedMessage
                        defaultMessage="Footer"
                        id="Footer"
                      >
                        <span>
                          Footer
                        </span>
                      </FormattedMessage>
                    </Memo(LoadingWrapper)>
                  </button>
                </Memo(SpinnerButton)>
                <div>
                  renderExtra
                </div>
              </div>
            </form>
          </div>
          <div
            className="outgoing-oauth-connections-docs-link"
          >
            <FormattedMessage
              defaultMessage="Get help with <link>configuring outgoing OAuth connections</link>."
              id="add_outgoing_oauth_connection.documentation_link"
              values={
                Object {
                  "link": [Function],
                }
              }
            >
              <span>
                Get help with 
                <a
                  href="https://mattermost.com/pl/outgoing-oauth-connections"
                  key=".$.1"
                >
                  configuring outgoing OAuth connections
                </a>
                .
              </span>
            </FormattedMessage>
          </div>
          <ConfirmModal
            confirmButtonClass="btn btn-primary"
            confirmButtonText="Save anyway"
            message="This connection has not been validated, Do you want to save anyway?"
            modalClass=""
            onCancel={[Function]}
            onConfirm={[Function]}
            onExited={[Function]}
            show={false}
            title="Save Outgoing OAuth Connection"
          >
            <GenericModal
              ariaLabelledby="confirmModalLabel"
              className="ConfirmModal a11y__modal "
              compassDesign={true}
              id="confirmModal"
              modalHeaderText="Save Outgoing OAuth Connection"
              onExited={[Function]}
              onHide={[Function]}
              show={false}
            >
              <Modal
                animation={true}
                aria-labelledby="confirmModalLabel"
                aria-modal="true"
                autoFocus={true}
                backdrop={true}
                bsClass="modal"
                dialogClassName="GenericModal__location--center a11y__modal GenericModal GenericModal__compassDesign ConfirmModal a11y__modal "
                dialogComponentClass={[Function]}
                enforceFocus={true}
                id="confirmModal"
                keyboard={true}
                manager={
                  ModalManager {
                    "add": [Function],
                    "containers": Array [],
                    "data": Array [],
                    "handleContainerOverflow": true,
                    "hideSiblingNodes": true,
                    "isTopModal": [Function],
                    "modals": Array [],
                    "remove": [Function],
                  }
                }
                onExited={[Function]}
                onHide={[Function]}
                renderBackdrop={[Function]}
                restoreFocus={true}
                role="none"
                show={false}
              >
                <Modal
                  autoFocus={true}
                  backdrop={true}
                  backdropClassName="modal-backdrop"
                  backdropTransition={[Function]}
                  containerClassName="modal-open"
                  enforceFocus={true}
                  keyboard={true}
                  manager={
                    ModalManager {
                      "add": [Function],
                      "containers": Array [],
                      "data": Array [],
                      "handleContainerOverflow": true,
                      "hideSiblingNodes": true,
                      "isTopModal": [Function],
                      "modals": Array [],
                      "remove": [Function],
                    }
                  }
                  onEntering={[Function]}
                  onExited={[Function]}
                  onHide={[Function]}
                  renderBackdrop={[Function]}
                  restoreFocus={true}
                  show={false}
                  transition={[Function]}
                />
              </Modal>
            </GenericModal>
          </ConfirmModal>
        </div>
      </AbstractOutgoingOAuthConnection>
    </Provider>
  </Router>
</BrowserRouter>
`;

exports[`components/integrations/AbstractOutgoingOAuthConnection should match snapshot, displays client error 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "undefinedundefined",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <AbstractOutgoingOAuthConnection
        footer={
          Object {
            "defaultMessage": "Footer",
            "id": "Footer",
          }
        }
        header={
          Object {
            "defaultMessage": "Header",
            "id": "Header",
          }
        }
        initialConnection={
          Object {
            "audiences": Array [
              "https://aud.com",
            ],
            "client_id": "clientid",
            "client_secret": "",
            "create_at": 1501365458934,
            "creator_id": "88oybd1dwfdoxpkpw1h5kpbyco",
            "grant_type": "client_credentials",
            "id": "facxd9wpzpbpfp8pad78xj75pr",
            "name": "testConnection",
            "oauth_token_url": "https://token.com",
            "update_at": 1501365458934,
          }
        }
        loading={
          Object {
            "defaultMessage": "Loading",
            "id": "Loading",
          }
        }
        renderExtra={
          <div>
            renderExtra
          </div>
        }
        serverError="serverError"
        submitAction={[MockFunction]}
        team={
          Object {
            "allow_open_invite": false,
            "allowed_domains": "",
            "company_name": "",
            "create_at": 0,
            "delete_at": 0,
            "description": "",
            "display_name": "name",
            "email": "",
            "group_constrained": false,
            "id": "facxd9wpzpbpfp8pad78xj75pr",
            "invite_id": "",
            "name": "test",
            "scheme_id": "id",
            "type": "O",
            "update_at": 0,
          }
        }
      >
        <div
          className="backstage-content"
        >
          <BackstageHeader>
            <div
              className="backstage-header"
            >
              <h1>
                <Link
                  to="/test/integrations/outgoing-oauth2-connections"
                >
                  <LinkAnchor
                    href="/test/integrations/outgoing-oauth2-connections"
                    navigate={[Function]}
                  >
                    <a
                      href="/test/integrations/outgoing-oauth2-connections"
                      onClick={[Function]}
                    >
                      <FormattedMessage
                        defaultMessage="Outgoing OAuth Connections"
                        id="add_outgoing_oauth_connection.header"
                      >
                        <span>
                          Outgoing OAuth Connections
                        </span>
                      </FormattedMessage>
                    </a>
                  </LinkAnchor>
                </Link>
                <span
                  className="backstage-header__divider"
                  key="divider1"
                >
                  <i
                    className="fa fa-angle-right"
                    title="Breadcrumb Icon"
                  />
                </span>
                <FormattedMessage
                  defaultMessage="Header"
                  id="Header"
                >
                  <span>
                    Header
                  </span>
                </FormattedMessage>
              </h1>
            </div>
          </BackstageHeader>
          <div
            className="backstage-form"
          >
            <form
              className="form-horizontal"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label col-sm-4"
                  htmlFor="name"
                >
                  <FormattedMessage
                    defaultMessage="Name"
                    id="add_outgoing_oauth_connection.name.label"
                  >
                    <span>
                      Name
                    </span>
                  </FormattedMessage>
                </label>
                <div
                  className="col-md-5 col-sm-8"
                >
                  <input
                    className="form-control"
                    id="name"
                    onChange={[Function]}
                    type="text"
                    value="testConnection"
                  />
                  <div
                    className="form__help"
                  >
                    <FormattedMessage
                      defaultMessage="Specify the name for your OAuth connection."
                      id="add_outgoing_oauth_connection.name.help"
                    >
                      <span>
                        Specify the name for your OAuth connection.
                      </span>
                    </FormattedMessage>
                  </div>
                </div>
              </div>
              <div
                className="form-group"
              >
                <label
                  className="control-label col-sm-4"
                  htmlFor="client_id"
                >
                  <FormattedMessage
                    defaultMessage="Client ID"
                    id="add_outgoing_oauth_connection.client_id.label"
                  >
                    <span>
                      Client ID
                    </span>
                  </FormattedMessage>
                </label>
                <div
                  className="col-md-5 col-sm-8"
                >
                  <input
                    autoComplete="off"
                    className="form-control"
                    id="client_id"
                    onChange={[Function]}
                    type="text"
                    value="clientid"
                  />
                  <div
                    className="form__help"
                  >
                    <FormattedMessage
                      defaultMessage="Specify the Client ID for your OAuth connection."
                      id="add_outgoing_oauth_connection.client_id.help"
                    >
                      <span>
                        Specify the Client ID for your OAuth connection.
                      </span>
                    </FormattedMessage>
                  </div>
                </div>
              </div>
              <div
                className="form-group"
              >
                <label
                  className="control-label col-sm-4"
                  htmlFor="client_secret"
                >
                  <FormattedMessage
                    defaultMessage="Client Secret"
                    id="add_outgoing_oauth_connection.client_secret.label"
                  >
                    <span>
                      Client Secret
                    </span>
                  </FormattedMessage>
                </label>
                <div
                  className="col-md-5 col-sm-8"
                >
                  <input
                    autoComplete="off"
                    className="form-control disabled"
                    disabled={true}
                    id="client_secret"
                    type="text"
                    value="••••••••••••••••••••••••••••••••••••••••"
                  />
                  <span
                    className="outgoing-oauth-connections-edit-secret"
                    onClick={[Function]}
                  >
                    <i
                      className="icon icon-pencil-outline"
                    />
                  </span>
                  <div
                    className="form__help"
                  >
                    <FormattedMessage
                      defaultMessage="Specify the Client Secret for your OAuth connection."
                      id="add_outgoing_oauth_connection.client_secret.help"
                    >
                      <span>
                        Specify the Client Secret for your OAuth connection.
                      </span>
                    </FormattedMessage>
                  </div>
                </div>
              </div>
              <div
                className="form-group"
              >
                <label
                  className="control-label col-sm-4"
                  htmlFor="oauth_token_url"
                >
                  <FormattedMessage
                    defaultMessage="OAuth Token URL"
                    id="add_outgoing_oauth_connection.oauth_token_url.label"
                  >
                    <span>
                      OAuth Token URL
                    </span>
                  </FormattedMessage>
                </label>
                <div
                  className="col-md-5 col-sm-8"
                >
                  <input
                    className="form-control"
                    id="token_url"
                    onChange={[Function]}
                    type="text"
                    value="https://token.com"
                  />
                  <div
                    className="form__help"
                  >
                    <FormattedMessage
                      defaultMessage="Specify the OAuth Token URL for your OAuth connection."
                      id="add_outgoing_oauth_connection.oauth_token_url.help"
                    >
                      <span>
                        Specify the OAuth Token URL for your OAuth connection.
                      </span>
                    </FormattedMessage>
                  </div>
                  <div
                    className="outgoing-oauth-connection-validate-button-container"
                  >
                    <ValidateButton
                      onClick={[Function]}
                      setUnvalidated={[Function]}
                      status="initial"
                    >
                      <button
                        className="btn btn-tertiary btn-sm"
                        id="validateConnection"
                        onClick={[Function]}
                        type="button"
                      >
                        <FormattedMessage
                          defaultMessage="Validate Connection"
                          id="add_outgoing_oauth_connection.validate"
                        >
                          <span>
                            Validate Connection
                          </span>
                        </FormattedMessage>
                      </button>
                    </ValidateButton>
                  </div>
                </div>
              </div>
              <div
                className="form-group"
              >
                <label
                  className="control-label col-sm-4"
                  htmlFor="audienceUrls"
                >
                  <FormattedMessage
                    defaultMessage="Audience URLs (One Per Line)"
                    id="add_outgoing_oauth_connection.audienceUrls.label"
                  >
                    <span>
                      Audience URLs (One Per Line)
                    </span>
                  </FormattedMessage>
                </label>
                <div
                  className="col-md-5 col-sm-8"
                >
                  <textarea
                    className="form-control"
                    id="audienceUrls"
                    onChange={[Function]}
                    rows={3}
                    value=""
                  />
                  <div
                    className="form__help"
                  >
                    <FormattedMessage
                      defaultMessage="The URLs which will receive requests with the OAuth token, e.g. your custom slash command handler endpoint. Must be a valid URL and start with http:// or https://."
                      id="add_outgoing_oauth_connection.audienceUrls.help"
                    >
                      <span>
                        The URLs which will receive requests with the OAuth token, e.g. your custom slash command handler endpoint. Must be a valid URL and start with http:// or https://.
                      </span>
                    </FormattedMessage>
                  </div>
                </div>
              </div>
              <div
                className="backstage-form__footer"
              >
                <Memo(FormError)
                  errors={
                    Array [
                      "serverError",
                      <Memo(MemoizedFormattedMessage)
                        defaultMessage="One or more audience URLs are required."
                        id="add_outgoing_oauth_connection.audienceUrls.required"
                      />,
                    ]
                  }
                  type="backstage"
                >
                  <div
                    className="pull-left has-error"
                  >
                    <label
                      className="control-label"
                    >
                      <FormattedMessage
                        defaultMessage="One or more audience URLs are required."
                        id="add_outgoing_oauth_connection.audienceUrls.required"
                      >
                        <span>
                          One or more audience URLs are required.
                        </span>
                      </FormattedMessage>
                    </label>
                  </div>
                </Memo(FormError)>
                <Link
                  className="btn btn-tertiary"
                  to="/test/integrations/outgoing-oauth2-connections"
                >
                  <LinkAnchor
                    className="btn btn-tertiary"
                    href="/test/integrations/outgoing-oauth2-connections"
                    navigate={[Function]}
                  >
                    <a
                      className="btn btn-tertiary"
                      href="/test/integrations/outgoing-oauth2-connections"
                      onClick={[Function]}
                    >
                      <FormattedMessage
                        defaultMessage="Cancel"
                        id="add_outgoing_oauth_connection.cancel"
                      >
                        <span>
                          Cancel
                        </span>
                      </FormattedMessage>
                    </a>
                  </LinkAnchor>
                </Link>
                <Memo(SpinnerButton)
                  className="btn btn-primary"
                  id="saveConnection"
                  onClick={[Function]}
                  spinning={false}
                  spinningText="Loading"
                  type="submit"
                >
                  <button
                    className="btn btn-primary"
                    disabled={false}
                    id="saveConnection"
                    onClick={[Function]}
                    type="submit"
                  >
                    <Memo(LoadingWrapper)
                      loading={false}
                      text="Loading"
                    >
                      <FormattedMessage
                        defaultMessage="Footer"
                        id="Footer"
                      >
                        <span>
                          Footer
                        </span>
                      </FormattedMessage>
                    </Memo(LoadingWrapper)>
                  </button>
                </Memo(SpinnerButton)>
                <div>
                  renderExtra
                </div>
              </div>
            </form>
          </div>
          <div
            className="outgoing-oauth-connections-docs-link"
          >
            <FormattedMessage
              defaultMessage="Get help with <link>configuring outgoing OAuth connections</link>."
              id="add_outgoing_oauth_connection.documentation_link"
              values={
                Object {
                  "link": [Function],
                }
              }
            >
              <span>
                Get help with 
                <a
                  href="https://mattermost.com/pl/outgoing-oauth-connections"
                  key=".$.1"
                >
                  configuring outgoing OAuth connections
                </a>
                .
              </span>
            </FormattedMessage>
          </div>
          <ConfirmModal
            confirmButtonClass="btn btn-primary"
            confirmButtonText="Save anyway"
            message="This connection has not been validated, Do you want to save anyway?"
            modalClass=""
            onCancel={[Function]}
            onConfirm={[Function]}
            onExited={[Function]}
            show={false}
            title="Save Outgoing OAuth Connection"
          >
            <GenericModal
              ariaLabelledby="confirmModalLabel"
              className="ConfirmModal a11y__modal "
              compassDesign={true}
              id="confirmModal"
              modalHeaderText="Save Outgoing OAuth Connection"
              onExited={[Function]}
              onHide={[Function]}
              show={false}
            >
              <Modal
                animation={true}
                aria-labelledby="confirmModalLabel"
                aria-modal="true"
                autoFocus={true}
                backdrop={true}
                bsClass="modal"
                dialogClassName="GenericModal__location--center a11y__modal GenericModal GenericModal__compassDesign ConfirmModal a11y__modal "
                dialogComponentClass={[Function]}
                enforceFocus={true}
                id="confirmModal"
                keyboard={true}
                manager={
                  ModalManager {
                    "add": [Function],
                    "containers": Array [],
                    "data": Array [],
                    "handleContainerOverflow": true,
                    "hideSiblingNodes": true,
                    "isTopModal": [Function],
                    "modals": Array [],
                    "remove": [Function],
                  }
                }
                onExited={[Function]}
                onHide={[Function]}
                renderBackdrop={[Function]}
                restoreFocus={true}
                role="none"
                show={false}
              >
                <Modal
                  autoFocus={true}
                  backdrop={true}
                  backdropClassName="modal-backdrop"
                  backdropTransition={[Function]}
                  containerClassName="modal-open"
                  enforceFocus={true}
                  keyboard={true}
                  manager={
                    ModalManager {
                      "add": [Function],
                      "containers": Array [],
                      "data": Array [],
                      "handleContainerOverflow": true,
                      "hideSiblingNodes": true,
                      "isTopModal": [Function],
                      "modals": Array [],
                      "remove": [Function],
                    }
                  }
                  onEntering={[Function]}
                  onExited={[Function]}
                  onHide={[Function]}
                  renderBackdrop={[Function]}
                  restoreFocus={true}
                  show={false}
                  transition={[Function]}
                />
              </Modal>
            </GenericModal>
          </ConfirmModal>
        </div>
      </AbstractOutgoingOAuthConnection>
    </Provider>
  </Router>
</BrowserRouter>
`;
